feat: Implement forced macOS updates, add proxy settings with testing, migrate legacy master keys, manage menu bar visibility, and remove unused CSS variables.

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 				"noArrayIndexKey": "off",
 				"noExplicitAny": "off",
 				"noAssignInExpressions": "off",
-				"noGlobalIsNan": "off"
+				"noGlobalIsNan": "off",
+				"noTsIgnore": "off"
 			},
 			"correctness": {
 				"useExhaustiveDependencies": "off"
